generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Usuario {
  id                        Int                      @id @default(autoincrement())
  email                     String                   @unique
  password_hash             String
  dni                       String?                  @unique
  nombres                   String?
  apellidos                 String?
  telefono                  String?
  estado                    EstadoUsuario            @default(activo)
  creado_en                 DateTime                 @default(now())
  actualizado_en            DateTime                 @updatedAt
  alumnosCreados            Alumno[]                 @relation("AlumnoCreador")
  alumnosActualizados       Alumno[]                 @relation("AlumnoActualizador")
  asignacionesAlumnoSalon   AlumnoSalon[]            @relation("AlumnoSalonAsignador")
  relacionesApoderadoAlumno ApoderadoAlumno[]        @relation("RelacionCreador")
  competenciasCreadas       Competencia[]            @relation("CompetenciaCreador")
  cursosCreados             Curso[]                  @relation("CursoCreador")
  permisosActualizados      PermisosAdministrativo[] @relation("PermisosActualizados")
  permisosOtorgados         PermisosAdministrativo[] @relation("PermisosOtorgados")
  salonesCreados            Salon[]                  @relation("SalonCreador")
  salonCursosAsignados      SalonCurso[]             @relation("SalonCursoAsignador")
  periodosAcademicosCreados PeriodoAcademico[]       @relation("PeriodoAcademicoCreador")
  profesorAsignacionesCreadas ProfesorAsignacion[]   @relation("ProfesorAsignacionCreador")
  evaluacionesCreadas       Evaluacion[]             @relation("EvaluacionCreador")
  notasRegistradas          RegistroNota[]           @relation("NotasRegistradas")
  creados                   UsuarioRol[]             @relation("CreadoPor")
  roles                     UsuarioRol[]             @relation("UsuarioRoles")

  @@map("usuario")
}

model Rol {
  id           Int          @id @default(autoincrement())
  nombre       String       @unique
  usuarios_rol UsuarioRol[]

  @@map("rol")
}

model UsuarioRol {
  id             Int             @id @default(autoincrement())
  usuario_id     Int
  rol_id         Int
  colegio_id     Int?
  hecho_en       DateTime?
  hecho_por      Int?
  administrativo Administrativo?
  apoderado      Apoderado?
  director       Director?
  profesor       Profesor?
  colegio        Colegio?        @relation(fields: [colegio_id], references: [id], onDelete: Cascade)
  creadoPor      Usuario?        @relation("CreadoPor", fields: [hecho_por], references: [id])
  rol            Rol             @relation(fields: [rol_id], references: [id], onDelete: Cascade)
  usuario        Usuario         @relation("UsuarioRoles", fields: [usuario_id], references: [id], onDelete: Cascade)

  @@unique([usuario_id, rol_id, colegio_id])
  @@index([usuario_id])
  @@index([colegio_id])
  @@map("usuario_rol")
}

model DRE {
  id     Int     @id @default(autoincrement())
  nombre String  @unique
  codigo String? @unique
  ugeles UGEL[]

  @@map("dre")
}

model UGEL {
  id       Int       @id @default(autoincrement())
  dreId    Int
  nombre   String
  codigo   String?   @unique
  colegios Colegio[]
  dre      DRE       @relation(fields: [dreId], references: [id])

  @@map("ugel")
}

model Colegio {
  id                Int            @id @default(autoincrement())
  ugelId            Int?
  nombre            String
  codigoModular     String?        @unique
  distrito          String?
  direccion         String?
  creadoEn          DateTime       @default(now())
  actualizadoEn     DateTime       @updatedAt
  alumnos           Alumno[]
  ugel              UGEL?          @relation(fields: [ugelId], references: [id])
  nivelesPermitidos ColegioNivel[]
  periodosAcademicos PeriodoAcademico[]
  salones           Salon[]
  usuariosRol       UsuarioRol[]

  @@map("colegio")
}

model Nivel {
  id            Int            @id @default(autoincrement())
  nombre        String         @unique
  activo        Boolean        @default(true)
  creadoEn      DateTime       @default(now())
  actualizadoEn DateTime       @updatedAt
  colegiosNivel ColegioNivel[]
  cursos        Curso[]

  @@map("nivel")
}

model ColegioNivel {
  id                Int      @id @default(autoincrement())
  colegioId         Int
  puedeCrearSalones Boolean  @default(true)
  activo            Boolean  @default(true)
  creadoEn          DateTime @default(now())
  actualizadoEn     DateTime @updatedAt
  nivelId           Int
  colegio           Colegio  @relation(fields: [colegioId], references: [id], onDelete: Cascade)
  nivel             Nivel    @relation(fields: [nivelId], references: [id])
  salones           Salon[]

  @@unique([colegioId, nivelId])
  @@map("colegio_nivel")
}

model Salon {
  id             Int           @id @default(autoincrement())
  colegioId      Int
  grado          String
  seccion        String
  turno          Turno         @default(MAÑANA)
  activo         Boolean       @default(true)
  creadoPor      Int
  creadoEn       DateTime      @default(now())
  actualizadoEn  DateTime      @updatedAt
  colegioNivelId Int
  alumnos        AlumnoSalon[]
  colegioNivel   ColegioNivel  @relation(fields: [colegioNivelId], references: [id], onDelete: NoAction, onUpdate: NoAction, map: "fk_salon_colegio_nivel")
  colegio        Colegio       @relation(fields: [colegioId], references: [id], onDelete: Cascade)
  creadorUser    Usuario       @relation("SalonCreador", fields: [creadoPor], references: [id])
  cursos         SalonCurso[]
  profesorAsignaciones ProfesorAsignacion[]

  @@unique([colegioId, colegioNivelId, grado, seccion, turno], map: "salon_colegioid_colegionivelid_grado_seccion_turno_key")
  @@index([colegioId])
  @@index([creadoPor])
  @@map("salon")
}

model Profesor {
  id                Int        @id @default(autoincrement())
  usuarioRolId      Int        @unique
  fechaNacimiento   DateTime?
  sexo              String?
  estadoCivil       String?
  nacionalidad      String?
  direccion         String?
  gradoAcademico    String?
  especialidad      String?
  institucionEgreso String?
  fechaIngreso      DateTime?
  condicionLaboral  String?
  creadoEn          DateTime   @default(now())
  actualizadoEn     DateTime   @updatedAt
  actualizadoPor    Int?
  usuarioRol        UsuarioRol @relation(fields: [usuarioRolId], references: [id], onDelete: Cascade)
  asignaciones      ProfesorAsignacion[]

  @@map("profesor")
}

model Apoderado {
  id              Int               @id @default(autoincrement())
  usuarioRolId    Int               @unique
  fechaNacimiento DateTime?
  sexo            String?
  estadoCivil     String?
  nacionalidad    String?
  direccion       String?
  ocupacion       String?
  centroTrabajo   String?
  telefonoTrabajo String?
  creadoEn        DateTime          @default(now())
  actualizadoEn   DateTime          @updatedAt
  actualizadoPor  Int?
  usuarioRol      UsuarioRol        @relation(fields: [usuarioRolId], references: [id], onDelete: Cascade)
  alumnos         ApoderadoAlumno[]

  @@map("apoderado")
}

model Administrativo {
  id               Int                     @id @default(autoincrement())
  usuarioRolId     Int                     @unique
  fechaNacimiento  DateTime?
  sexo             String?
  estadoCivil      String?
  nacionalidad     String?
  direccion        String?
  cargo            String
  fechaIngreso     DateTime?
  condicionLaboral String?
  creadoEn         DateTime                @default(now())
  actualizadoEn    DateTime                @updatedAt
  actualizadoPor   Int?
  usuarioRol       UsuarioRol              @relation(fields: [usuarioRolId], references: [id], onDelete: Cascade)
  permisos         PermisosAdministrativo?

  @@map("administrativo")
}

model Director {
  id                Int        @id @default(autoincrement())
  usuarioRolId      Int        @unique
  fechaNacimiento   DateTime?
  sexo              String?
  estadoCivil       String?
  nacionalidad      String?
  direccion         String?
  gradoAcademico    String?
  carrera           String?
  especializacion   String?
  institucionEgreso String?
  fechaInicio       DateTime?
  creadoEn          DateTime   @default(now())
  actualizadoEn     DateTime   @updatedAt
  usuarioRol        UsuarioRol @relation(fields: [usuarioRolId], references: [id], onDelete: Cascade)

  @@map("director")
}

model PermisosAdministrativo {
  id                            Int            @id @default(autoincrement())
  administrativoId              Int            @unique
  puedeRegistrarProfesores      Boolean        @default(false)
  puedeRegistrarApoderados      Boolean        @default(false)
  puedeRegistrarAdministrativos Boolean        @default(false)
  otorgadoPor                   Int?
  otorgadoEn                    DateTime       @default(now())
  actualizadoPor                Int?
  actualizadoEn                 DateTime       @updatedAt
  puedeRegistrarAlumnos         Boolean        @default(false)
  puedeGestionarSalones         Boolean        @default(false)
  puedeAsignarProfesores        Boolean        @default(false)
  usuarioActualizador           Usuario?       @relation("PermisosActualizados", fields: [actualizadoPor], references: [id])
  administrativo                Administrativo @relation(fields: [administrativoId], references: [id], onDelete: Cascade)
  usuarioOtorgador              Usuario?       @relation("PermisosOtorgados", fields: [otorgadoPor], references: [id])

  @@map("permisos_administrativo")
}

model Alumno {
  id              Int               @id @default(autoincrement())
  colegioId       Int
  dni             String?           @unique
  codigoAlumno    String?           @unique
  nombres         String
  apellidos       String
  fechaNacimiento DateTime?
  sexo            SexoAlumno?
  nacionalidad    String?           @default("Peruana")
  direccion       String?
  distrito        String?
  numeroContacto  String?
  activo          Boolean           @default(true)
  creadoPor       Int
  actualizadoPor  Int?
  creadoEn        DateTime          @default(now())
  actualizadoEn   DateTime          @updatedAt
  colegio         Colegio           @relation(fields: [colegioId], references: [id], onDelete: Cascade)
  creadorUser     Usuario           @relation("AlumnoCreador", fields: [creadoPor], references: [id])
  actualizadorUser Usuario?         @relation("AlumnoActualizador", fields: [actualizadoPor], references: [id])
  salon           AlumnoSalon?
  apoderados      ApoderadoAlumno[]
  notas           RegistroNota[]

  @@index([colegioId])
  @@index([dni])
  @@index([codigoAlumno])
  @@index([activo])
  @@map("alumno")
}

model ApoderadoAlumno {
  id             Int       @id @default(autoincrement())
  apoderadoId    Int
  alumnoId       Int
  parentesco     String
  esPrincipal    Boolean   @default(false)
  activo         Boolean   @default(true)
  creadoPor      Int
  creadoEn       DateTime  @default(now())
  actualizadoEn  DateTime  @updatedAt
  actualizadoPor Int?
  alumno         Alumno    @relation(fields: [alumnoId], references: [id], onDelete: Cascade)
  apoderado      Apoderado @relation(fields: [apoderadoId], references: [id], onDelete: Cascade)
  creador        Usuario   @relation("RelacionCreador", fields: [creadoPor], references: [id])

  @@unique([apoderadoId, alumnoId])
  @@index([apoderadoId])
  @@index([alumnoId])
  @@index([activo])
  @@index([esPrincipal])
  @@map("apoderado_alumno")
}

model Curso {
  id            Int           @id @default(autoincrement())
  nombre        String
  descripcion   String?
  color         String?
  activo        Boolean       @default(true)
  creadoPor     Int
  creadoEn      DateTime      @default(now())
  actualizadoEn DateTime      @updatedAt
  nivelId       Int
  competencias  Competencia[]
  creador       Usuario       @relation("CursoCreador", fields: [creadoPor], references: [id])
  nivel         Nivel         @relation(fields: [nivelId], references: [id])
  salones       SalonCurso[]
  profesorAsignaciones ProfesorAsignacion[]

  @@unique([nombre, nivelId])
  @@index([nivelId])
  @@index([activo])
  @@index([creadoPor])
  @@index([nivelId, activo])
  @@map("curso")
}

model Competencia {
  id            Int          @id @default(autoincrement())
  cursoId       Int
  nombre        String
  orden         Int
  activo        Boolean      @default(true)
  creadoPor     Int
  creadoEn      DateTime     @default(now())
  actualizadoEn DateTime     @updatedAt
  creador       Usuario      @relation("CompetenciaCreador", fields: [creadoPor], references: [id])
  curso         Curso        @relation(fields: [cursoId], references: [id], onDelete: Cascade)
  evaluaciones  Evaluacion[]

  @@unique([cursoId, orden])
  @@index([cursoId])
  @@index([activo])
  @@index([creadoPor])
  @@index([cursoId, orden, activo])
  @@map("competencia")
}

model AlumnoSalon {
  id              Int      @id @default(autoincrement())
  alumnoId        Int      @unique
  salonId         Int
  fechaAsignacion DateTime @default(now())
  asignadoPor     Int
  creadoEn        DateTime @default(now())
  actualizadoEn   DateTime @updatedAt
  alumno          Alumno   @relation(fields: [alumnoId], references: [id], onDelete: Cascade)
  asignador       Usuario  @relation("AlumnoSalonAsignador", fields: [asignadoPor], references: [id])
  salon           Salon    @relation(fields: [salonId], references: [id], onDelete: Cascade)

  @@index([salonId])
  @@index([alumnoId])
  @@index([fechaAsignacion])
  @@map("alumno_salon")
}

model SalonCurso {
  id          Int      @id @default(autoincrement())
  salonId     Int
  cursoId     Int
  activo      Boolean  @default(true)
  asignadoEn  DateTime @default(now())
  asignadoPor Int?
  asignador   Usuario? @relation("SalonCursoAsignador", fields: [asignadoPor], references: [id])
  curso       Curso    @relation(fields: [cursoId], references: [id], onDelete: Cascade)
  salon       Salon    @relation(fields: [salonId], references: [id], onDelete: Cascade)

  @@unique([salonId, cursoId])
  @@index([salonId])
  @@index([cursoId])
  @@index([salonId, activo])
  @@index([cursoId, activo])
  @@map("salon_curso")
}

enum EstadoUsuario {
  activo
  inactivo
  suspendido
}

enum NivelEducativo {
  INICIAL
  PRIMARIA
  SECUNDARIA
}

enum SexoAlumno {
  masculino
  femenino
}

enum TipoPeriodo {
  BIMESTRE
  TRIMESTRE
  SEMESTRE
}

enum Turno {
  MAÑANA
  TARDE
  NOCHE
}

model PeriodoAcademico {
  id              Int          @id @default(autoincrement())
  colegioId       Int
  nombre          String       // "Primer Período", "Segundo Período"
  tipo            TipoPeriodo  // BIMESTRE, TRIMESTRE, SEMESTRE
  anioAcademico   Int          // 2025, 2026
  orden           Int          // 1, 2, 3, 4
  fechaInicio     DateTime     @db.Date
  fechaFin        DateTime     @db.Date
  activo          Boolean      @default(false)
  
  // Auditoría
  creadoPor       Int
  creadoEn        DateTime     @default(now())
  actualizadoEn   DateTime     @updatedAt

  // Relaciones
  colegio         Colegio      @relation(fields: [colegioId], references: [id], onDelete: Cascade)
  creador         Usuario      @relation("PeriodoAcademicoCreador", fields: [creadoPor], references: [id])
  evaluaciones    Evaluacion[]

  // Índices y constraints
  @@unique([colegioId, anioAcademico, orden])
  @@index([colegioId])
  @@index([anioAcademico])
  @@index([activo])
  @@index([colegioId, activo])
  @@map("periodo_academico")
}

model ProfesorAsignacion {
  id          Int      @id @default(autoincrement())
  profesorId  Int
  salonId     Int
  cursoId     Int
  activo      Boolean  @default(true)
  
  // Auditoría
  asignadoPor Int
  asignadoEn  DateTime @default(now())
  actualizadoEn DateTime @updatedAt

  // Relaciones
  profesor    Profesor @relation(fields: [profesorId], references: [id], onDelete: Cascade)
  salon       Salon    @relation(fields: [salonId], references: [id], onDelete: Cascade)
  curso       Curso    @relation(fields: [cursoId], references: [id], onDelete: Cascade)
  asignador   Usuario  @relation("ProfesorAsignacionCreador", fields: [asignadoPor], references: [id])
  evaluaciones Evaluacion[]

  // Índices y constraints
  @@index([profesorId])
  @@index([salonId])
  @@index([cursoId])
  @@index([activo])
  @@index([profesorId, activo])
  @@map("profesor_asignacion")
}

model Evaluacion {
  id                    Int                @id @default(autoincrement())
  competenciaId         Int
  profesorAsignacionId  Int
  periodoId             Int
  nombre                String
  fechaEvaluacion       DateTime?          @db.Date
  
  // Auditoría
  creadoPor             Int
  creadoEn              DateTime           @default(now())
  actualizadoEn         DateTime           @updatedAt

  // Relaciones
  competencia           Competencia        @relation(fields: [competenciaId], references: [id], onDelete: Cascade)
  profesorAsignacion    ProfesorAsignacion @relation(fields: [profesorAsignacionId], references: [id], onDelete: Cascade)
  periodo               PeriodoAcademico   @relation(fields: [periodoId], references: [id], onDelete: Cascade)
  creador               Usuario            @relation("EvaluacionCreador", fields: [creadoPor], references: [id])
  notas                 RegistroNota[]

  // Índices optimizados
  @@index([competenciaId])
  @@index([profesorAsignacionId])
  @@index([periodoId])
  @@index([creadoPor])
  @@index([fechaEvaluacion])
  @@index([profesorAsignacionId, periodoId])
  @@index([competenciaId, profesorAsignacionId])
  @@map("evaluacion")
}

model RegistroNota {
  id                 Int      @id @default(autoincrement())
  alumnoId           Int
  evaluacionId       Int
  nota               String   // Input original del profesor: 'AD', 'A', 'B', 'C' o '0-20'
  notaEscalaCalculo  Float?   // Conversión automática a escala 1.0-4.0 para cálculos
  registradoPor      Int
  creadoEn           DateTime @default(now())
  actualizadoEn      DateTime @updatedAt

  // Relaciones
  alumno      Alumno     @relation(fields: [alumnoId], references: [id], onDelete: Cascade)
  evaluacion  Evaluacion @relation(fields: [evaluacionId], references: [id], onDelete: Cascade)
  registrador Usuario    @relation("NotasRegistradas", fields: [registradoPor], references: [id])

  // Constraint único: Un alumno solo puede tener una nota por evaluación
  @@unique([alumnoId, evaluacionId])
  
  // Índices optimizados
  @@index([alumnoId])
  @@index([evaluacionId])
  @@index([registradoPor])
  @@index([alumnoId, evaluacionId])
  @@map("registro_nota")
}
